# dep-gcp

./: pyproject.toml
dep_gcp/: create_bucket.py  delete_bucket.py  extract.py  fake_data_generator.py  faker.py  list_buckets.py
